--- a/assets/css/publications.css
+++ b/assets/css/publications.css
@@ -28,13 +28,13 @@ blockquote { background: var(--global-bg-color); border-left: 2px solid var(--gl
 
 .publications { margin-top: 2rem; }
 
-.publications h1 { color: var(--global-theme-color); font-size: 2rem; text-align: center; margin-top: 1em; margin-bottom: 1em; }
+.publications h1 { color: var(--global-theme-color); font: 16.0px/1.5 VT323; font-size: 2rem; text-align: center; margin-top: 1em; margin-bottom: 1em; }
 
-.publications h2 { margin-bottom: 1rem; }
+.publications h2 { font: 16.0px/1.5 VT323; margin-bottom: 1rem; }
 
-.publications h2 span { font-size: 1.5rem; }
+.publications h2 span { font: 16.0px/1.5 VT323; font-size: 1.5rem; }
 
-.publications h2.year { color: #e8e8e8; border-top: 1px solid #e8e8e8; margin-top: 2rem; margin-bottom: 0rem; text-align: right; }
+.publications h2.year { font: 16.0px/1.5 VT323; color: #e8e8e8; border-top: 1px solid #e8e8e8; margin-top: 2rem; margin-bottom: 0rem; text-align: right; }
 
 .publications ol.bibliography { list-style: none; padding: 0; margin-top: 0; }
 
