--- a/_sass/minimal-light.scss
+++ b/_sass/minimal-light.scss
@@ -235,14 +235,14 @@ h3, h4, h5, h6 {
 }
 
 h1 {
-  font: 16.0px/1.5 VT323;
+  font: 16.0px/1.5 Silkscreen;
   font-weight: 500;
   color:#287967;
   margin:0 0 20px;
 }
 
 h2 {
-  font: 16.0px/1.5 VT323;
+  font: 16.0px/1.5 Silkscreen;
   color:#287967;
   font-weight: 500;
   margin:2px 0px 15px;
