--- a/_sass/minimal-light.scss
+++ b/_sass/minimal-light.scss
@@ -251,11 +251,11 @@ h2 {
 
 @media (prefers-color-scheme: dark) {
   h1, h3, h4, h5, h6 {
-    color:rgb(62, 183, 240);
+    color:#287967;
   }
 
   h2 {
-    color:rgb(62, 183, 240);
+    color:#287967;
   }
 }
 
