--- a/_sass/minimal-light.scss
+++ b/_sass/minimal-light.scss
@@ -160,6 +160,10 @@ papertitle {
 
 @media (prefers-color-scheme: dark) {
     body {
+        background-image: url('assets/img/birdbranch_vector.png');
+        background-position: bottom left;
+        background-repeat: no-repeat;
+        background-size: auto;
         background-color: #20212b;
         color: #dadbdf;
     }
