--- a/_sass/minimal-light.scss
+++ b/_sass/minimal-light.scss
@@ -160,7 +160,7 @@ papertitle {
 
 @media (prefers-color-scheme: dark) {
     body {
-        background-image: url('assets/img/birdbranch_vector.png');
+        background-image: url('./assets/img/birdbranch_vector.png');
         background-position: bottom left;
         background-repeat: no-repeat;
         background-size: auto;
