--- a/assets/css/publications.css
+++ b/assets/css/publications.css
@@ -79,4 +79,4 @@ blockquote { background: var(--global-bg-color); border-left: 2px solid var(--gl
 
 .publications ol.bibliography li div.abstract.hidden.open { border-color: var(--global-text-color); }
 
-.publications ol.bibliography li .teaser { border-radius: 8px; box-shadow: 3px 3px 6px #888; height: 123px; width: 270px; margin-top: 5px; margin-left: 5px; margin-bottom: 5px; object-fit: cover; }
+.publications ol.bibliography li .teaser { border-radius: 0px; box-shadow: 1px #00b18b; height: 150px; width: 250px; margin-top: 5px; margin-left: 5px; margin-bottom: 5px; object-fit: cover; }
