--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -16,26 +16,27 @@
 }
 
 @media (max-width: 800px) {
-    .mobile-stack {
-        flex-direction: column !important;
-        align-items: center !important;
-        gap: 0 !important;
-        position: relative;
-        z-index: 1;
-    }
-
     .about-illustration {
+        position: absolute;
         opacity: 0.25;
-        width: 80% !important;
-        height: auto;
-        margin: 0 auto -100px auto !important;
-        z-index: 0;
+        z-index: -1;
         pointer-events: none;
+        margin: 0 !important;
+        width: 300px;
     }
 
-    .mobile-stack div {
-        z-index: 2;
-        position: relative;
-        background: transparent;
+    .upper-right {
+        top: 10%;
+        right: 0;
+    }
+
+    .lower-left {
+        visibility: hidden;
+        bottom: 10%;
+        left: 0;
+    }
+
+    .wrapper section {
+        overflow-x: hidden;
     }
 }
